fix dark mode home analytics card

--- a/client/src/modules/components/HomeAnalytics/components/CardAnalytic/CardAnalytic.module.scss
+++ b/client/src/modules/components/HomeAnalytics/components/CardAnalytic/CardAnalytic.module.scss
@@ -63,6 +63,6 @@
 
 [data-theme='dark'] {
   .container {
-    filter: brightness(.8);
+    filter: saturate(2);
   }
 }
